--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -10,14 +10,20 @@
     padding: 4rem 0;
     &__logo{
         width: 5rem;
+        @include media-breakpoint-up(lg){
+            width: auto;
+        }
     }
     &__nav{
         display: flex;
         flex-direction: column;
         grid-gap: 1rem;
+        padding: 2rem 0;
         @include media-breakpoint-up(lg){
+            padding: 0;
             flex-direction: row;
             justify-content: flex-end;
+            margin-top: 1rem;
         }
     }
     &__nav-link{
@@ -27,6 +33,9 @@
     &__copyright{
         display: inline-block;
         color: $color-white;
+        @include media-breakpoint-up(lg){
+            margin-top: 1rem;
+        }
     }
     
 }
