--- a/src/assets/scss/info.scss
+++ b/src/assets/scss/info.scss
@@ -26,5 +26,8 @@
     &__btn{
         padding: 1.5rem 4rem;
         font-size: 1.6rem;
+        @include media-breakpoint-up(lg){
+            padding: 1.5rem 8rem;
+        }
     }
 }
