--- a/src/assets/scss/productList.scss
+++ b/src/assets/scss/productList.scss
@@ -5,20 +5,30 @@
 
 .productList{
     position: relative;
-    padding-top: 5rem;
-    padding-bottom: 4rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    @include media-breakpoint-up(md){
+        padding-top: 2rem;
+        padding-bottom: 10rem;
+    }
     &__card{
         border-radius: 2rem;
         box-shadow: 0 8px 30px -8px rgba(29,37,45,.3);
         padding: 3rem;
         margin-left: 2rem;
         margin-right: 2rem;
-        margin-top: 5rem;
-        margin-bottom: 3rem;
         border: none;
+        height: 100%;
         @include media-breakpoint-up(md){
             margin-left: 0;
             margin-right: 0;
+        }
+    }
+    &__col{
+        padding-top: 5rem;
+        padding-bottom: 2rem;
+        @include media-breakpoint-up(md){
+            padding-top: 8rem;
         }
     }
     &__offer{
@@ -32,8 +42,8 @@
         padding: 1rem 2rem;
         white-space: nowrap;
         width: 80%;
-        border-top-left-radius: 1rem;
-        border-top-right-radius: 1rem;
+        border-top-left-radius: 2rem;
+        border-top-right-radius: 2rem;
     }
     &__brand{
         font-family: $font-medium;
@@ -76,6 +86,10 @@
             border-color: $color-pink;
             background-color: $color-pink;
         }
+        &:active{
+            border-color: $color-pink;
+            background-color: $color-pink;
+        }
     }
     &__price{
         margin-bottom: 1rem;
@@ -97,4 +111,9 @@
             object-fit: cover;
         }
     }
+}
+
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active{
+    border-color: $color-pink;
+            background-color: $color-pink;
 }
